--- a/index.html
+++ b/index.html
@@ -750,20 +750,20 @@
     const templates = [
       {
         id: 'template1',
-        name: 'Template 1',
+        name: 'FireFlink Custom Template 01',
         file: 'FireFlink_Custom_Template_01.html',
         preview: null
       },
       {
         id: 'template2',
-        name: 'Template 2',
+        name: 'FireFlink Custom Template 02',
         file: 'FireFlink_Custom_Template_02.html',
         preview: null
       },
       {
         id: 'template3',
-        name: 'FireFlink_Custom_Template_03.html',
-        file: null,
+        name: 'FireFlink Custom Template 03',
+        file: 'FireFlink_Custom_Template_03.html',
         preview: null
       },
       {
