Update template names to use underscores

--- a/index.html
+++ b/index.html
@@ -750,19 +750,19 @@
     const templates = [
       {
         id: 'template1',
-        name: 'FireFlink Custom Template 01',
+        name: 'FireFlink_Custom_Template_01',
         file: 'FireFlink_Custom_Template_01.html',
         preview: null
       },
       {
         id: 'template2',
-        name: 'FireFlink Custom Template 02',
+        name: 'FireFlink_Custom_Template_02',
         file: 'FireFlink_Custom_Template_02.html',
         preview: null
       },
       {
         id: 'template3',
-        name: 'FireFlink Custom Template 03',
+        name: 'FireFlink_Custom_Template_03',
         file: 'FireFlink_Custom_Template_03.html',
         preview: null
       },
